# ProyectoProg4

./: CMakeLists.txt  README.md  palabras_ejemplo.csv
libs/openssl/crypto/: cryptlib.c
libs/sqlite3/: CMakeLists.txt
src/: consola.c  consola.h  datos.c  datos.h  main.c  menu.c  menu.h  sesion.c  sesion.h  token.c  usuario.c  usuario.h  utilidades.c  utilidades.h
src/admin/: cargarpalabras.c  cargarpalabras.h  csv.c  csv.h  main.c  menu.c  menu.h
src/cliente/: conexion.cpp  conexion.h  juego.cpp  juego.h  main.cpp  menu.c  menu.cpp  menu.h  sesion.c  sesion.h
src/common/: consola.c  consola.h  utilidades.c  utilidades.h
src/datos/: datos.c  datos.h  puntuaciones.c  puntuaciones.h  token.c  token.h  usuario.c  usuario.h
src/menu/: menu.c  menu.h
src/server/: main.cpp  sesion.cpp  sesion.h
src/sockets/: incluir.h  mensajes.h  tcom.c  tcom.h
